<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/descriptionImageLogo"
                app:srcCompat="@drawable/walruslogo"
                tools:srcCompat="@drawable/walruslogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_Uppercase"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:textSize="60sp"/>

        </LinearLayout>


        <EditText
            android:id="@+id/edt_TexteATraduire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputTexteATrad"
            android:layout_marginTop="30dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/bouton_lampe_torche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="lancerSignalMorse"
            android:text="@string/boutonLancement"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/descriptionSlideBar"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderVitesse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descriptionSlideBar"
            android:stepSize="100"
            android:value="500"
            android:valueFrom="100"
            android:valueTo="1000"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Flash"
                    android:textStyle="bold">
                </TextView>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchFlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:onClick="clickSwitchFlash">
                </com.google.android.material.materialswitch.MaterialSwitch>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bip"
                    android:textStyle="bold">
                </TextView>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchBip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:onClick="clickSwitchBip">
                </com.google.android.material.materialswitch.MaterialSwitch>
            </LinearLayout>
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:stretchColumns="*">

            <!-- Ligne 1 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonSos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="SOS" />

                <Button
                    android:id="@+id/buttonHello"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="HELLO" />
            </TableRow>

            <!-- Ligne 2 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="YES" />

                <Button
                    android:id="@+id/buttonNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="NO" />
            </TableRow>

            <!-- Ligne 3 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonGood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="GOOD" />

                <Button
                    android:id="@+id/buttonBad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="BAD" />
            </TableRow>

            <!-- Ligne 4 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonFriend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="FRIEND" />

                <Button
                    android:id="@+id/buttonEnemy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="ENEMY" />
            </TableRow>

            <!-- Ligne 5 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonCome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="COME" />

                <Button
                    android:id="@+id/buttonFlee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:onClick="lancerSignalRaccourci"
                    android:text="FLEE" />
            </TableRow>
        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>